--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo List</title>
+  <title>To Do List</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <main>
     <div class="container">
-      <h1 class="app-title">todos</h1>
+      <h1 class="app-title">TO DO</h1>
       <ul class="todo-list js-todo-list"></ul>
   
       <form class="js-form">
