alterações na funcionalidade

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
+  <title>To Do List</title> 
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <main>
     <div class="container">
       <h1 class="app-title">TO DO</h1>
-      <ul class="todo-list js-todo-list"></ul>
-  
+      <p class="app-subtitle">Adicione suas tarefas</p>
       <form class="js-form">
-        <input autofocus type="text" aria-label="Enter a new todo item" placeholder="Ex: Ir ao supermercado." class="js-todo-input">
+        <input autofocus type="text" aria-label="Enter a new todo item" class="js-todo-input">
       </form>
+      <ul class="todo-list js-todo-list"></ul>
     </div>
   </main>
   
